--- a/css/styile.css
+++ b/css/styile.css
@@ -69,7 +69,7 @@ img {
     width: 132px;
     height: 122px;
     margin-left: auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
         
 }
 
