--- a/css/styile.css
+++ b/css/styile.css
@@ -8,37 +8,23 @@
     font-style: normal;
 }
 
-/* @font-face {
+@font-face {
     font-family: 'Courier New';
-    src: url('../../fonts/couriercyrps.eot');
+    src: url('../fonts/couriercyrps.eot');
     src: local('вє'), url('../fonts/couriercyrps.woff') format('woff'), url('../fonts/couriercyrps.ttf') format('truetype'), url('../fonts/couriercyrps.svg') format('svg');
     font-weight: 700;
     font-style: normal;
-} */
+}
 
-@font-face {
+
+
+/* @font-face {
     font-family: 'Courier New';
-    src: url('../fonts/couriercyrps_bold.eot');
-    src: local('вє'), url('../fonts/couriercyrps_bold.woff') format('woff'), url('../fonts/couriercyrps_bold.ttf') format('truetype'), url('../fonts/couriercyrps_bold.svg') format('svg');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Conv_couriercyrps_boldinclined';
-    src: url('../fonts/couriercyrps_boldinclined.eot');
-    src: local('вє'), url('../fonts/couriercyrps_boldinclined.woff') format('woff'), url('../fonts/couriercyrps_boldinclined.ttf') format('truetype'), url('../fonts/couriercyrps_boldinclined.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Conv_couriercyrps_inclined';
     src: url('../fonts/couriercyrps_inclined.eot');
     src: local('вє'), url('../fonts/couriercyrps_inclined.woff') format('woff'), url('../fonts/couriercyrps_inclined.ttf') format('truetype'), url('../fonts/couriercyrps_inclined.svg') format('svg');
-    font-weight: normal;
+    font-weight: 700;
     font-style: normal;
-}
+} */
 
 
 body {
@@ -80,7 +66,7 @@ img {
 
 .container {
     position: relative;
-    min-width: 320px;
+    min-width: 414px;
     /* min-height: 512px; */
     /* border: 1px solid #F4A1C7; */
 
@@ -159,8 +145,10 @@ img {
 
 .btn {
     position: absolute;
-        bottom: 74px;
-        right: 59px;
+    bottom: 71px;
+        right: 52px;
+        width: 62px;
+        height: 20px;
     background: #F4A1C7;
     border: 1px solid #FFFFFF;
     box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.25);
@@ -216,7 +204,7 @@ img {
         line-height: 29px;
         text-align: center;
         color: #FFF7F7;
-        margin-bottom: 12px;
+        margin-bottom: 161px;
 }
 
 .btn-modal {
@@ -277,7 +265,7 @@ img {
         line-height: 29px;
         text-align: center;
         color: #FFF7F7;
-        margin-bottom: 106px;
+        /* margin-bottom: 106px; */
 }
 
 .img-size {
