--- a/css/styile.css
+++ b/css/styile.css
@@ -34,6 +34,9 @@ body {
     box-sizing: border-box;
 }
 
+canvas {
+    display: block
+}
 
 .list {
     list-style: none;
@@ -127,7 +130,7 @@ img {
     display: flex;
 }
 .img {
-    padding-top: 101px;
+    padding-top: 6px;
     
 }
 .img-pult{
@@ -178,7 +181,7 @@ img {
     z-index: 7;
     /* margin: auto; */
     width: 100%;
-    height: 896px;
+    height: 805px;
     background-image: url(../imadge/group-6.png);
     background-size: cover;
         background-repeat: no-repeat;
@@ -233,7 +236,7 @@ img {
     z-index: 7;
     /* margin: auto; */
     width: 100%;
-    height: 896px;
+    height: 805px;
     background: linear-gradient(180deg, rgba(46, 193, 228, 0.8) 0%, rgba(253, 255, 213, 0.8) 100%);
     background-image: url(../imadge/group-7.png);
     background-size: cover;
